deployment/infra/lubricant-core-logger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lubricant-core-logger
  namespace: lubricant
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lubricant-core-logger
  template:
    metadata:
      labels:
        app: lubricant-core-logger
    spec:
      containers:
        - name: lubricant-core-logger
          image: hub.iotroom.top/aenjoy/lubricant-core-logger:nightly
