deployment/infra/lubricant-datastore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lubricant-datastore
  namespace: lubricant
spec:
  replicas: 5 # Number of replicas for the datastore deployment should be >= 4
  selector:
    matchLabels:
      app: lubricant-datastore
  template:
    metadata:
      labels:
        app: lubricant-datastore
    spec:
      containers:
        - name: lubricant-datastore
          image: hub.iotroom.top/aenjoy/lubricant-datastore:nightly
