deployment/infra/lubricant-reporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lubricant-report
  namespace: lubricant
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lubricant-report
  template:
    metadata:
      labels:
        app: lubricant-report
    spec:
      containers:
        - name: lubricant-report
          image: hub.iotroom.top/aenjoy/lubricant-reporter:nightly
