deployment/infra/lubricant-apiserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lubricant-apiserver
  namespace: lubricant
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lubricant-apiserver
  template:
    metadata:
      labels:
        app: lubricant-apiserver
    spec:
      containers:
        - name: lubricant-apiserver
          image: hub.iotroom.top/aenjoy/lubricant-apiserver:nightly
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
              hostPort: 8080
          readinessProbe:
              httpGet:
                path: /health
                port: 8080
              initialDelaySeconds: 5
              periodSeconds: 5
              timeoutSeconds: 3
              failureThreshold: 3
          volumeMounts:
            - name: casdoor-publickey
              mountPath: /etc/casdoor
      volumes:
        - name: casdoor-publickey
          hostPath:
            path: /etc/casdoor
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: lubricant-apiserver
  namespace: lubricant
spec:
  type: NodePort
  ports:
    - port: 80
      name: http
      targetPort: 8080
    - port: 8080
      name: http-map
      targetPort: 8080
  selector:
    app: lubricant-apiserver
