deployment/infra/lubricant-core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lubricant-core
  namespace: lubricant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lubricant-core
  template:
    metadata:
      labels:
        app: lubricant-core
    spec:
      containers:
        - name: lubricant-core
          image: hub.iotroom.top/aenjoy/lubricant-core:nightly
          ports:
            - containerPort: 8080
            - containerPort: 5423
          volumeMounts:
            - name: casdoor-publickey
              mountPath: /etc/casdoor
      volumes:
        - name: casdoor-publickey
          hostPath:
            path: /etc/casdoor
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: lubricant-core
  namespace: lubricant
spec:
  ports:
    - port: 8080
      targetPort: 8080
    - port: 5423
      targetPort: 5423
  selector:
    app: lubricant-core
