deployment/infra/lubricant-grpcserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lubricant-grpcserver
  namespace: lubricant
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lubricant-grpcserver
  template:
    metadata:
      labels:
        app: lubricant-grpcserver
    spec:
      containers:
        - name: lubricant-grpcserver
          image: hub.iotroom.top/aenjoy/lubricant-grpcserver:nightly
          ports:
            - containerPort: 5423
              name: grpc
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: lubricant-grpcserver
  namespace: lubricant
spec:
  type: NodePort
  ports:
    - port: 5423
      name: grpc
      targetPort: 5423
  selector:
    app: lubricant-grpcserver
